--- a/lang/lang.en-GB.json
+++ b/lang/lang.en-GB.json
@@ -202,7 +202,7 @@
             "viewDateJoined": "View Date Joined"
         },
         "messageCommands": {
-            "viewDateSent": "View Date Sent",
+            "viewDateSent": "View Date Sent"
         },
         "arguments": {
             "command": "command",
